@@ -268,6 +268,8 @@ enum pic_processor {
   pic18f2620,
   pic18f2680,
   pic18f2681,
+  pic18f2682,
+  pic18f2685,
   pic18f4220,
   pic18f4320,
   pic18f4331,
@@ -295,6 +297,8 @@ enum pic_processor {
   pic18f4620,
   pic18f4680,
   pic18f4681,
+  pic18f4682,
+  pic18f4685,
   pic18f6310,
   pic18f6390,
   pic18f6410,
